# yp_project_work_2

./: Cargo.toml  Dockerfile  README.md  tickers.txt
client/: Cargo.toml
client/src/: client.rs  config.rs  main.rs
common/: Cargo.toml
common/src/: lib.rs  protocol.rs  quote.rs
server/: Cargo.toml
server/src/: client_handler.rs  generator.rs  main.rs  protocol.rs  quote.rs  server.rs
