[workspace]
members = ["server", "client"]
resolver = "2"

[workspace.dependencies]
rand = "0.8"
clap = { version = "4.0", features = ["derive"] }
crossbeam = "0.8"


[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cognitive_complexity = "warn"
module_name_repetitions = "allow"
must_use_candidate = "allow"
module_inception = "allow"