[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
rust_decimal = { version = "1.39", features = ["serde-with-str"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nonempty = "0.12"
url = "2.5"

[dev-dependencies]
rstest = "0.26"
proptest = "1.9"

[lints]
workspace = true
