[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = { workspace = true }
crossbeam = { workspace = true }

rust_decimal = "1.39"
rust_decimal_macros = "1.39"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
parking_lot = "0.12"
nonempty = "0.12"
url = "2.5"


[dev-dependencies]
rstest = "0.26"
testcontainers = "0.26"
proptest = "1.9"