[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
rand = { workspace = true }
crossbeam = { workspace = true }

rust_decimal = "1.39"
rust_decimal_macros = "1.39"
anyhow = "1.0"
parking_lot = "0.12"
log = "0.4.29"


[dev-dependencies]
rstest = "0.26"
testcontainers = "0.26"
proptest = "1.9"

[lints]
workspace = true